Fix cta-bar on mobile

--- a/app/assets/stylesheets/cta-bar.scss
+++ b/app/assets/stylesheets/cta-bar.scss
@@ -1,8 +1,7 @@
 .calltoaction {
   margin: 0 auto;
   z-index: 999;
-  font-size: 18px;
-  padding: 10px 180px;
+  padding: 10px 0;
   background-color: $brand-danger;
   color: white;
   text-align: center;
